Adicionado novo parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores iusto fugit atque optio blanditiis laboriosam, laudantium perspiciatis amet recusandae nulla placeat vero ea nobis! Quo modi consequuntur sed aspernatur tempore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi maiores dolor voluptatibus eos facilis cum in mollitia repellat molestias ab officiis nemo voluptatem aut officia sapiente, harum eius dolorem quisquam.</p>
 </body>
 </html>
